# Space-Shooter

./: .gitignore  Cargo.toml  README.md  run.sh
assets/: global_settings.ron
assets/blueprint/: ship.ron
assets/data/: engine.data.ron  engine.ron  engine_data_2.ron  gun.ron  sonar.ron
src/: ai.rs  body.rs  bullet.rs  camera.rs  collider.rs  collision.rs  color_palette.rs  debug.rs  durability.rs  global.rs  graphic.rs  gun.rs  health.rs  heater.rs  iterable_enum.rs  lifetime.rs  main.rs  mass.rs  planet.rs  player.rs  primitive.rs  record.rs  rotation.rs  schedule.rs  ship.rs  space.rs  velocity.rs
src/ai/: ai_ship_tree.rs  mod.rs  setup.rs
src/collision/: collider.rs  collider_type.rs  mod.rs
src/data/: mod.rs
src/data_config/: assets_loaded.rs  component_data.rs  data.rs  global_settings.rs  mod.rs  raw.rs
src/data_tbl/: assets_loaded.rs  blueprint.rs  component_data.rs  data.rs  global_settings.rs  mod.rs  raw.rs
src/particle_system/: emitter.rs  mod.rs  particle.rs
src/serialization/: transform.rs
src/ship_composition/: bullet.rs  engine.rs  gun.rs  mod.rs
src/ship_composition/sonar/: detection_event.rs  mod.rs  sonar_pulse.rs
src/space/: gravity.rs  mass.rs  mod.rs  planet.rs
src/ui/: mod.rs  test.rs
src/velocity/: global.rs  max.rs  mod.rs
